--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -11351,7 +11351,6 @@ textarea.form-control-lg {
 header.masthead {
     position: relative;
     background-color: #343a40;
-    background: url("../../img/bg-masthead.jpg") no-repeat center center;
     background-size: cover;
     padding-top: 8rem;
     padding-bottom: 8rem;
@@ -11415,7 +11414,6 @@ header.masthead h1, header.masthead .h1 {
 .call-to-action {
     position: relative;
     background-color: #343a40;
-    background: url("../../img/bg-masthead.jpg") no-repeat center center;
     background-size: cover;
     padding-top: 7rem;
     padding-bottom: 7rem;
@@ -11914,6 +11912,17 @@ html, body {
 
 .text-brown {
   color: brown;
+}
+
+.dot {
+    height: 35px;
+    width: 35px;
+    background-color: green;
+    border-radius: 50%;
+    display: inline-flex; /* or inline-flex */
+    align-items: center;
+    justify-content: center;
+    margin-left: 5px;
 }
 
 
