--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -1,46 +1,39 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>Issue Tracking System</title>
-    <!-- Bootstrap icons-->
-    <link href="../css/bootstrap.css" rel="stylesheet"/>
-    <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="../css/styles.css" rel="stylesheet" />
-</head>
-<body>
-<!-- Navigation-->
-<nav class="navbar navbar-light bg-light static-top">
-    <div class="container">
-        <a class="navbar-brand" href="#!">Issue Tracking System</a>
-        <a class="btn btn-primary" href="/login">Log In</a>
-    </div>
-</nav>
 
-<form action="index.html" class="contact">
+<head th:replace="homefragment :: html_head"/>
+
+<body>
+
+<nav th:replace="homefragment :: header"/>
+
+<form class="contact" action="/contact/send" modelAttribute="message">
     <fieldset class="contact-inner">
+        <div th:if="${msg != null}">
+            <span style="color: green" th:text="${msg}"/>
+        </div>
+
         <p class="contact-input">
             <input type="text" name="name" placeholder="Your Name…" autofocus>
+        </p>
+
+        <p class="contact-input">
+            <input type="text" name="email" placeholder="Your Email…" autofocus>
         </p>
 
         <p class="contact-input">
             <label for="select" class="select">
                 <select name="subject" id="select">
                     <option value="" selected>Choose Subject…</option>
-                    <option value="1">I have a suggestion</option>
-                    <option value="1">I found a bug</option>
-                    <option value="1">Other</option>
+                    <option value="I have a suggestion">I have a suggestion</option>
+                    <option value="I found a bug">I found a bug</option>
+                    <option value="Other">Other</option>
                 </select>
             </label>
         </p>
 
         <p class="contact-input">
-            <textarea name="message" placeholder="Your Message…"></textarea>
+            <textarea name="body" placeholder="Your Message…"></textarea>
         </p>
 
         <p class="contact-submit">
@@ -50,36 +43,8 @@
 </form>
 
 <!-- Footer-->
-<footer class="footer bg-light">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
-                <ul class="list-inline mb-2">
-                    <li class="list-inline-item"><a href="/about">About</a></li>
-                    <li class="list-inline-item">⋅</li>
-                    <li class="list-inline-item"><a href="/contact">Contact</a></li>
-                    <li class="list-inline-item">⋅</li>
-                    <li class="list-inline-item"><a href="/services">Services</a></li>
-                    <li class="list-inline-item">⋅</li>
-                </ul>
-                <p class="text-muted small mb-4 mb-lg-0">&copy; Issue Tracking System 2021. All Rights Reserved.</p>
-            </div>
-            <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
-                <ul class="list-inline mb-0">
-                    <li class="list-inline-item me-4">
-                        <a href="#!"><i class="bi-facebook fs-3"></i></a>
-                    </li>
-                    <li class="list-inline-item me-4">
-                        <a href="#!"><i class="bi-twitter fs-3"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#!"><i class="bi-instagram fs-3"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</footer>
+<footer th:replace="homefragment :: footer"/>
+
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
