project new page update

--- a/src/main/resources/static/css/dashstyle.css
+++ b/src/main/resources/static/css/dashstyle.css
@@ -30108,6 +30108,15 @@ div.tagsinput span.tag a {
     text-decoration: underline;
 }
 
+
+.text-green{
+   color: green;
+}
+
+.text-blue{
+   color: blue;
+}
+
 .display-i{
     display: inline;
 }
