--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -16,12 +16,8 @@
 <body>
 <!-- Navigation-->
 
+<nav th:replace="homefragment :: header"/>
 
-<nav class="navbar navbar-light bg-light static-top">
-    <div class="container">
-        <a class="navbar-brand" href="#!">Issue Tracking System</a>
-    </div>
-</nav>
 <!-- Masthead-->
 <header class="masthead">
     <div class="container position-relative">
@@ -34,25 +30,16 @@
                         <div th:if="${msg != null}">
                             <span style="color: red" th:text="${msg}"/>
                         </div>
-                        <form class="form-signin" action="/login" method="post" th:object="${user}" th:action="@{/login}">
-                                <span id="reauth-email" class="reauth-email"></span>
-                                <input type="email"
-                                       class="form-control"
-                                       name="email"
-                                       placeholder="Email address"
-                                       required autofocus>
-                                <input type="password"
-                                       class="form-control"
-                                       name="password"
-                                       placeholder="Password"
-                                       required>
-                                <div id="remember" class="checkbox">
-                                </div>
-                                <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Log in</button>
-                            </form><!-- /form -->
-                            <a href="/reset_password" class="forgot-password">
-                                Forgot the password?
-                            </a>
+                        <form class="form-signin" action="/reset_password" method="post" th:object="${user}" th:action="@{/reset_password}">
+                            <span id="reauth-email" class="reauth-email"></span>
+                            <input type="email"
+                                   class="form-control"
+                                   name="email"
+                                   placeholder="Email address"
+                                   required autofocus>
+                            <div></div>
+                            <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Reset Password</button>
+                        </form><!-- /form -->
                     </div>
                 </div>
             </div>
@@ -102,4 +89,5 @@
 <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 </html>
+
 
